src/test/ui/macros/macro-inner-attributes.stderr
error[E0433]: failed to resolve: use of undeclared type or module `a`
  --> $DIR/macro-inner-attributes.rs:17:5
   |
LL |     a::bar();
   |     ^ use of undeclared type or module `a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
